--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "fabric": "^5.5.2",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
